--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ select {
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #533fc4;
   font-size: 18px;
 }
 .city-options {
