--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ select {
 .time {
   font-weight: 900;
   font-size: 4rem;
-  line-height: 1.9rem;
+  line-height: 1.2;
 }
 h2 {
   font-size: 1.5em;
